# husarion_camera_msgs

./: CLAUDE.md  CMakeLists.txt  README.md  package.xml
msg/: AudioInfo.msg  AudioPacket.msg  CameraCapabilities.msg  CameraDevice.msg  CameraDeviceList.msg  CameraFormat.msg  CameraMode.msg  CameraResolution.msg
srv/: SetCameraAlias.srv  SetCameraDevice.srv  SetCameraFormat.srv  SetMmapBuffers.srv
